src/objects/InstitutionUser__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>This formula shows the First Name of the User.</description>
        <formula>User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Users</relationshipLabel>
        <relationshipName>InstitutionUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsInstituteAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when any site user is institute admin.</description>
        <label>IsInstituteAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>This formula shows User&apos;s Last Name.</description>
        <formula>User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>InstitutionUsers</relationshipLabel>
        <relationshipName>InstitutionUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>InstitutionUsers</relationshipLabel>
        <relationshipName>InstitutionUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InstitutionUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isInstituteCalender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInstituteCalender</label>
        <type>Checkbox</type>
    </fields>
    <label>InstitutionUser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InstitutionUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>